[package]
name = "shroud-mod-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
egui = "0.21.0"
eframe = "0.21.3"
home = "0.5.4"
fs_extra = "1.3.0"
webpage = "1.5.0"
sysinfo = "0.28.2"
duct = "0.13.6"